--- a/swot.upwelling.downwelling.carbon.ipynb
+++ b/swot.upwelling.downwelling.carbon.ipynb
@@ -13,7 +13,7 @@
    "id": "b4fd0f8d-d83f-4625-91d2-4a6f57f896d2",
    "metadata": {},
    "source": [
-    "This Jupyter Notebook contains the code necessary to recreate all of my figures and work for my study on how geostrophic events like upwelling and downwelling, particularly those influenced by the Ekman Transport, impact carbon uptake in the Southern Ocean. This project was mentored by the Dr. Andrew Thompson, director of Caltech's Linde and Maxine Center for Global Environmental Sciences."
+    "This Jupyter Notebook contains the code necessary to recreate all of my figures and work for my study on how geostrophic events like upwelling and downwelling, particularly those influenced by the Ekman Transport, impact carbon uptake in the Southern Ocean. This project was mentored by the Dr. Andrew Thompson, director of Caltech's Linde and Maxine Center for Global Environmental Science."
    ]
   },
   {
