--- a/swot.upwelling.downwelling.carbon.ipynb
+++ b/swot.upwelling.downwelling.carbon.ipynb
@@ -29,9 +29,7 @@
   {
    "cell_type": "markdown",
    "id": "0579d5cd-a060-4e78-b83f-070d337e10a6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Relevant Information"
    ]
@@ -39,9 +37,7 @@
   {
    "cell_type": "markdown",
    "id": "84334814-3089-4bfb-8618-298da6210bc9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Background Information"
    ]
@@ -57,9 +53,7 @@
   {
    "cell_type": "markdown",
    "id": "64d322df-47d7-4fb3-b91a-85f6c195cd4d",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Relevant Papers"
    ]
@@ -69,11 +63,11 @@
    "id": "aa39c229-096e-4b8d-aa01-c6d3df3dc19c",
    "metadata": {},
    "source": [
-    "*Fu et al. 2024* \"The Surface Water and Ocean Topography Mission: A Breakthrough in Radar Remote Sensing of the Ocean and Land Surface Water\"\n",
+    "*Fu et al. 2024* **\"The Surface Water and Ocean Topography Mission: A Breakthrough in Radar Remote Sensing of the Ocean and Land Surface Water\"**\n",
     "\n",
     "**Link:** https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2023GL107652\n",
     "\n",
-    "*Morrison et al. 2015* \"Upwelling in the Southern Ocean\"\n",
+    "*Morrison et al. 2015* **\"Upwelling in the Southern Ocean\"**\n",
     "\n",
     "**Link:** https://www.researchgate.net/publication/270508719_Upwelling_in_the_Southern_Ocean"
    ]
